--- a/index.html
+++ b/index.html
@@ -380,12 +380,12 @@
                 <div style="clear: both; margin-bottom: 30px"></div>
 
                 <!-- GOLD -->
-                <div alt="Trailine" class="col-xs-5 col-xs-offset-1 img-container">
+                <div alt="Trailine" class="col-xs-5 img-container">
                     <a alt="Trailine" style="width: 100%;" href="http://trainline.com" target="_blank">
                         <img style="width: 100%;" src="img/sponsors/logo-trainline.png"/>
                     </a>
                 </div>
-                <div alt="National Rail Enquiries" class="col-xs-5 img-container">
+                <div alt="National Rail Enquiries" class="col-xs-6 col-xs-offset-1 img-container">
                     <a alt="National Rail Enquiries" target="_blank" style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/sponsors/logo-nre.png"/>
                     </a>
@@ -394,24 +394,19 @@
                 <div style="clear: both; margin-bottom: 30px"></div>
 
                 <!-- SILVER -->
-                <div alt="Nomad Digital" class="col-xs-3 img-container">
+                <div alt="Nomad Digital" class="col-xs-3 col-xs-offset-1 img-container">
                     <a alt="Nomad Digital" target="_blank" style="width: 100%;" href="http://nomad-digital.com/">
                         <img style="width: 100%;" src="img/index/logo-nomad.png"/>
                     </a>
                 </div>
-                <div alt="Cogitare" class="col-xs-3 img-container">
-                    <a alt="Cogitare" target="_blank" style="width: 100%;" href="http://www.nationalrail.co.uk/">
-                        <img style="width: 100%;" src="img/index/logo-cogitare.png"/>
+                <div alt="IBM" class="col-xs-3 img-container">
+                    <a alt="IBM" target="_blank" style="width: 100%;" href="http://www.ibm.com/">
+                        <img style="width: 100%;" src="img/sponsors/logo-ibm-white.jpg"/>
                     </a>
                 </div>
                 <div alt="Chiltern Railways" class="col-xs-3 img-container">
                     <a alt="Chiltern Railways" target="_blank" style="width: 100%;" href="http://www.chilternrailways.co.uk/">
                         <img style="width: 100%;" src="img/sponsors/logo-chiltern-railways.png"/>
-                    </a>
-                </div>
-                <div alt="Bloomberg" class="col-xs-3 img-container">
-                    <a alt="Bloomberg" target="_blank" style="width: 100%;" href="http://www.nationalrail.co.uk/">
-                        <img style="width: 100%;" src="img/index/logo-bloomberg.png"/>
                     </a>
                 </div>
                 <div alt="Tech North" class="col-xs-3 col-xs-offset-3 img-container">
@@ -493,6 +488,28 @@
                         </div>
                 </div>
                     </div>
+        </div>
+    </section>
+
+
+    <section id="transport-sponsors" class="content-section text-center">
+        <div style="width: 90%; margin: auto auto;" class="row">
+            <div class="container col-lg-8 col-lg-offset-2">
+                <h1>Technology Sponsors</h1>
+                <hr/>
+                <br><br>
+            <div class="container col-sm-12">
+                <div alt="Bloomberg" class="col-xs-4 col-xs-offset-2 img-container">
+                    <a alt="Bloomberg" target="_blank" style="width: 100%;" href="http://www.bloomberglabs.com/">
+                        <img style="width: 100%;" src="img/index/logo-bloomberg.png"/>
+                    </a>
+                </div>
+                <div alt="Cogitare" class="col-xs-4 img-container">
+                    <a alt="Cogitare" target="_blank" style="width: 100%;" href="http://www.cogitare.biz/">
+                        <img style="width: 100%;" src="img/index/logo-cogitare.png"/>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -602,7 +619,7 @@
       <div class="tab-content col-md-8 col-md-offset-2 col-xl-6 col-xl-offset-3">
         <div role="tabpanel" class="tab-pane active" id="fri-sch">
             <section role="tabpanel" aria-hidden="false" class="content active" id="panel2-1">
-                
+
                 <h2 class="schedule-title">Friday 20th, November</h2>
 
                 <div class="row container col-lg-12">
