--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <div class="col-lg-8 col-lg-offset-2 columns">
                 <h1 class="text-center">Keynote Speakers</h1>
                 <hr/>
-                <div class="row main">
+                <!-- <div class="row main">
 
                     <div class="col-sm-3">
                         <img style="width:100%;" src="img/index/cp.jpg"/>
@@ -335,7 +335,7 @@
                             Government Whip in 2013 and in 2014.
                         </p>
                     </div>
-                </div>
+                </div> -->
 
                 <br><br>
                 <div class="row main">
