--- a/index.html
+++ b/index.html
@@ -315,14 +315,34 @@
             <div class="col-lg-8 col-lg-offset-2 columns">
                 <h1 class="text-center">Keynote Speakers</h1>
                 <hr/>
-                <!-- <div class="row main">
+                <div class="row main">
+
+                    <div class="col-sm-3">
+                        <img style="width:100%;" src="img/index/aj.jpg"/>
+                    </div>
+                    <div class="speaker-description col-sm-9">
+                        <h2>Andrew Jones</h2>
+                        <h3>Parliamentary Under Secretary of State at Department for Transport</h3>
+                        <p>
+                            Andrew Jones was appointed Parliamentary Under Secretary of State at Department for Transport in May 2015. He was elected the Conservative MP for Harrogate and Knaresborough in May 2010.
+                        </p>
+                        <p>
+                            From May 2003 to May 2011 Andrew was a local councillor on Harrogate Borough Council, representing the High Harrogate ward. He was also Cabinet Member for Resources from May 2003 to May 2010.
+
+                            Since being elected in 2010, Andrew has been a Parliamentary Private Secretary on the health, business and transport teams. He has also chaired the Northern Electrification Taskforce which provided the Secretary of State for Transport with advice on the next steps for electrification of railways in the North of England.
+                        </p>
+                    </div>
+                </div>
+
+                <br><br>
+                <div class="row main">
 
                     <div class="col-sm-3">
                         <img style="width:100%;" src="img/index/cp.jpg"/>
                     </div>
                     <div class="speaker-description col-sm-9">
                         <h2>Claire Perry</h2>
-                        <h3>Minister for Transport</h3>
+                        <h3>Parliamentary Under Secretary of State at Department for Transport</h3>
                         <p>
                             Claire Perry was appointed Parliamentary Under Secretary of State at the Department for Transport on 15 July 2014 and again in May 2015. She was elected Conservative MP for Devizes in 2010.
                         </p>
@@ -335,7 +355,7 @@
                             Government Whip in 2013 and in 2014.
                         </p>
                     </div>
-                </div> -->
+                </div>
 
                 <br><br>
                 <div class="row main">
@@ -878,6 +898,11 @@
                 <div class="col-xs-3 img-container">
                     <a alt="TechHub" style="width: 100%;" href="https://london.techhub.com/events/">
                         <img style="width: 80%;" src="img/hackathon-partners/techhub.png"/>
+                    </a>
+                </div>
+                <div class="col-xs-3 img-container">
+                    <a alt="TechHub" style="width: 100%;" href="https://london.techhub.com/events/">
+                        <img style="width: 80%;" src="img/hackathon-partners/phg.png"/>
                     </a>
                 </div>
             </div>
