--- a/index.html
+++ b/index.html
@@ -794,6 +794,10 @@
                 <h2>WHAT DO I NEED TO BRING?</h2>
                 <p>Obviously you need to take your laptop and a comfortable change of clothes for the weekend. On the Saturday night we will be staying in in co-working spaces for the night so you will need to bring a sleeping bag if you want to get a decent nights rest. Don’t forget your toothbrush too!</p>
                 <br><br>
+                
+                <h2>HACKTRAIN TICKET TERMS AND CONDITIONS</h2>
+                <p>The HackTrain team reserves the right to cancel, refund or return your ticket before or during the event for any relevant reason.</p>
+                <br><br>
             </div>
         </div>
     </section>
