--- a/index.html
+++ b/index.html
@@ -400,14 +400,19 @@
                 <div style="clear: both; margin-bottom: 30px"></div>
 
                 <!-- GOLD -->
-                <div alt="Trailine" class="col-xs-5 img-container">
+                <div alt="Trailine" class="col-xs-4 img-container">
                     <a alt="Trailine" style="width: 100%;" href="http://trainline.com" target="_blank">
                         <img style="width: 100%;" src="img/sponsors/logo-trainline.png"/>
                     </a>
                 </div>
-                <div alt="National Rail Enquiries" class="col-xs-6 col-xs-offset-1 img-container">
-                    <a alt="National Rail Enquiries" target="_blank" style="width: 100%;" href="http://www.nationalrail.co.uk/">
-                        <img style="width: 100%;" src="img/sponsors/logo-nre.png"/>
+                <div alt="ATOC" class="col-xs-4 img-container">
+                    <a alt="National Rail Enquiries" target="_blank" style="width: 100%;" href="http://atoc.org">
+                        <img style="width: 100%;" src="img/sponsors/logo-atoc.png"/>
+                    </a>
+                </div>
+                <div alt="Eversholt" class="col-xs-4 img-container">
+                    <a alt="Eversholt" target="_blank" style="width: 100%;" href="http://eversholtrail.co.uk">
+                        <img style="width: 100%;" src="img/sponsors/logo-eversholt.png"/>
                     </a>
                 </div>
 
