--- a/index.html
+++ b/index.html
@@ -488,16 +488,21 @@
 
                     <div style="margin-top: 50px" class="col-xs-12 img-container">
 
-
                         <div class="col-xs-4 img-container">
                           <a href="https://www.gov.uk/government/organisations/department-for-transport">
-                            <img alt="Smart Rail" style="margin: auto auto" class="img-responsive" src="img/sponsors/logo-hs2.png"/>
+                            <img alt="Department for Transport" style="margin: auto auto" class="img-responsive" src="img/index/dft.png"/>
+                          </a>
+                        </div>
+
+                        <div class="col-xs-4 img-container">
+                          <a href="https://www.gov.uk/government/organisations/high-speed-two-limited">
+                            <img alt="High speed rail" style="margin: auto auto" class="img-responsive" src="img/sponsors/logo-hs2.png"/>
                           </a>
                         </div>
 
                         <div class="col-xs-4 img-container">
                           <a href="https://www.gov.uk/government/organisations/department-for-transport">
-                            <img alt="Smart Rail" style="margin: auto auto" class="img-responsive" src="img/index/dft.png"/>
+                            <img alt="Smart Rail" style="margin: auto auto" class="img-responsive" src="img/sponsors/logo-bis.png"/>
                           </a>
                         </div>
 
