added fixed prize

--- a/index.html
+++ b/index.html
@@ -380,6 +380,39 @@
         </div>
     </section>
 
+
+    <section name="speakers" id="speakers">
+        <div class="row" id="prizes-content">
+            <div class="col-lg-8 col-lg-offset-2 columns">
+                <h1 class="text-center">Keynote Speakers</h1>
+                <hr/>
+
+                <br><br>
+                <div class="row main">
+
+                    <div class="col-sm-3">
+                        <img style="width:100%;" src="img/index/cp.jpg"/>
+                    </div>
+                    <div class="speaker-description col-sm-9">
+                        <h2>Claire Perry</h2>
+                        <h3>Parliamentary Under Secretary of State at Department for Transport</h3>
+                        <p>
+                            Claire Perry was appointed Parliamentary Under Secretary of State at the Department for Transport on 15 July 2014 and again in May 2015. She was elected Conservative MP for Devizes in 2010.
+                        </p>
+                        <p>
+                            In 2007 Claire worked an adviser to George Osborne before being elected as the MP for the Devizes constituency in central Wiltshire in May 2010. Highlights of her political career include:
+
+                            Member of the Justice. Select Committee from 2010 to 2011.
+                            Parliamentary Private Secretary to the Secretary of State for Defence, from 2011 to 2013.
+                            Special Advisor to the Prime Minister on preventing the sexualisation and commercialisation of children.
+                            Government Whip in 2013 and in 2014.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="sponsor" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-lg-8 col-lg-offset-2">
@@ -580,15 +613,15 @@
                         <p class="desc">Fully paid trip to Amsterdam for one Team member to present their project at <a href="http://www.smartraileurope.com/">Smart Rail Europe</a></p>
                     </div>
                     <div class="col-lg-4 columns">
-                        <img src="http://www.drishtant.com/images/Uploaded_images/FAQ.jpg"/>
+                        <img src="img/index/hoverboard.jpg"/>
                         <p class="name">2nd Place</p>
-                        <p class="desc">More awesomeness to be announced...</p>
+                        <p class="desc">Hoverboards</p>
                         <p class="desc">Fully paid trip to Amsterdam for one Team member to present their project at <a href="http://www.smartraileurope.com/">Smart Rail Europe</a></p>
                     </div>
                     <div class="col-lg-4 columns">
-                        <img src="http://www.drishtant.com/images/Uploaded_images/FAQ.jpg"/>
+                        <img src="img/index/pebble.png"/>
                         <p class="name">3rd Place</p>
-                        <p class="desc">More awesomeness to be announced...</p>
+                        <p class="desc">Sphero</p>
                         <p class="desc">Fully paid trip to Amsterdam for one Team member to present their project at <a href="http://www.smartraileurope.com/">Smart Rail Europe</a></p>
                     </div>
                 </div>
@@ -620,23 +653,18 @@
                 <div class="row gadget">
                     <div class="col-lg-3 columns">
                         <img src="https://lh4.ggpht.com/m-paIO91U0Iy1RVLyvDLiFAOWZQ8n1t8Zf6q7ZR9ZDgJlG5FRr0Uec2OjqRKMy84TbQ=w300" />
-                        <p class="name">Newton Award</p>
-                        <p class="desc">The indivudal who demonstrates high technical performance will win a fully-fledged lightsaber.</p>
-                    </div>
-                    <div class="col-lg-3 columns">
-                        <img src="http://images.samsung.com/is/image/samsung/uk_SM-R321NZWABTU_000000005_Left-45-Degree_white?$TM-Gallery$" />
-                        <p class="name">Da Vinci Award</p>
-                        <p class="desc">The trainhacker who demonstrates outstanding performance throughout the event will obtain a VR Kit.</p>
+                        <p class="name">Best Developer</p>
+                        <p class="desc">Pebble watches.</p>
                     </div>
                     <div class="col-lg-3 columns">
                         <img src="http://cdn.shopify.com/s/files/1/0243/7593/products/3doodler-in-action-800x800.png" />
-                        <p class="name">Picasso Award</p>
-                        <p class="desc">The designer that manages to demonstrate their designing skills, will obtain a 3D Printing Pen (3Doodler)</p>
+                        <p class="name">Best Designer</p>
+                        <p class="desc">Walcom tablet</p>
                     </div>
                     <div class="col-lg-3 columns">
                         <img src="http://i.ytimg.com/vi/EaroWOVZvjk/maxresdefault.jpg" />
-                        <p class="name">Rockefeller Award</p>
-                        <p class="desc">The most bold and driven entrepreneur will obtain a hoverboard.</p>
+                        <p class="name">Best Entrepreneur</p>
+                        <p class="desc">Lightsabers.</p>
                     </div>
                 </div>
                 
@@ -934,8 +962,6 @@
                     <h2 itemprop="name">River Tamoor Baig<br></h2>
                     <ul itemprop="description" class="organizer-description">
                         <li>Co-founder at HackTrain.</li>
-                        <li>Ran accelerator programmes.</li>
-                        <li>Launched Europe's first invitation only hackathon and was Conductor of StartupBus UK 2014</li>
                     </ul>
 
                     <ul class="banner-social-buttons col-sm-12">
@@ -948,9 +974,7 @@
                     <a href="http://www.linkedin.com/pub/alejandro-saucedo/41/6b3/4b0"><img src="img/index/alejandro.jpg" alt="Alejandro Saucedo"/></a>
                     <h2 itemprop="name">Alejandro Saucedo</h2>
                     <ul itemprop="description" class="organizer-description">
-                        <li>Has organized 30+ hackathons around the world.</li>
                         <li>Co-founder at HackTrain.</li>
-                        <li>Had the opportunity to discuss entrepreneurial matters with PM David Cameron, and later on with the Duke of York.</li>
                     </ul>
 
                     <ul class="banner-social-buttons col-sm-12">
@@ -961,32 +985,28 @@
                     </ul>
                 </div>
                 <div class="organizer col-md-3 col-sm-4">
-                    <a href=""><img src="https://scontent-lhr3-1.xx.fbcdn.net/hphotos-xpa1/t31.0-8/11058758_10152873679886608_4415771636014368774_o.jpg" alt="Ed Maclean"/></a>
-                    <h2 itemprop="name">Ed Maclean</h2>
+                    <a href="https://www.linkedin.com/in/grace-copplestone-b50a6020"><img src="img/index/grace.jpg" alt="Grace Copplestone"/></a>
+                    <h2 itemprop="name">Grace Copplestone</h2>
                     <ul itemprop="description" class="organizer-description">
-                        <li>Organized a conference with hundreds of people.</li>
-                        <li>Managed multiple international events.</li>
-                        <li>Sales at Hack Partners.</li>
+                        <li>Hack Partners operations manager.</li>
                     </ul>
 
                     <ul class="banner-social-buttons col-sm-12">
                         <li class="col-sm-12">
-                            <a href="mailito:ed@hackpartners.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">ed@hackpartners.com</span></a>
+                            <a href="mailito:grace@hackpartners.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">grace@hackpartners.com</span></a>
                         </li>
                     </ul>
                 </div>
                 <div class="organizer col-md-3 col-sm-4">
-                    <a href="https://www.facebook.com/sally.kuok?fref=ts"><img src="img/index/sally.jpg" alt="Sally Kuok"/></a>
-                    <h2 itemprop="name">Sally Kuok</h2>
+                    <a href="https://www.facebook.com/sally.kuok?fref=ts"><img src="img/index/chris.jpg" alt="Chrisopher Chi Wai Tse"/></a>
+                    <h2 itemprop="name">Chrisopher Chi Wai Tse</h2>
                     <ul itemprop="description" class="organizer-description">
-                        <li>EMEA Marketing at Hack Partners.</li>
-                        <li>Winner of the Startup Weekend Sheffield.</li>
-                        <li>AIESEC Leader.</li>
+                        <li>Hack Partners events organizer.</li>
                     </ul>
 
                     <ul class="banner-social-buttons col-sm-12">
                         <li class="col-sm-12">
-                            <a href="mailito:sally@hackpartners.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">sally@hackpartners.com</span></a>
+                            <a href="mailito:chris@hackpartners.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">chris@hackpartners.com</span></a>
                         </li>
                     </ul>
                 </div>
