added fixed prize

--- a/index.html
+++ b/index.html
@@ -651,17 +651,17 @@
                     </div>
                 </div> -->
                 <div class="row gadget">
-                    <div class="col-lg-3 columns">
+                    <div class="col-md-4 columns">
                         <img src="https://lh4.ggpht.com/m-paIO91U0Iy1RVLyvDLiFAOWZQ8n1t8Zf6q7ZR9ZDgJlG5FRr0Uec2OjqRKMy84TbQ=w300" />
                         <p class="name">Best Developer</p>
                         <p class="desc">Pebble watches.</p>
                     </div>
-                    <div class="col-lg-3 columns">
+                    <div class="col-md-4 columns">
                         <img src="http://cdn.shopify.com/s/files/1/0243/7593/products/3doodler-in-action-800x800.png" />
                         <p class="name">Best Designer</p>
                         <p class="desc">Walcom tablet</p>
                     </div>
-                    <div class="col-lg-3 columns">
+                    <div class="col-md-4 columns">
                         <img src="http://i.ytimg.com/vi/EaroWOVZvjk/maxresdefault.jpg" />
                         <p class="name">Best Entrepreneur</p>
                         <p class="desc">Lightsabers.</p>
