--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@
                     </ul>
                 </div>
                 <div class="organizer col-md-3 col-sm-4">
-                    <a href="https://www.facebook.com/sally.kuok?fref=ts"><img src="img/index/chris.jpg" alt="Chrisopher Chi Wai Tse"/></a>
+                    <a href="https://www.linkedin.com/in/christopher-tse-56b39526"><img src="img/index/chris.jpg" alt="Chrisopher Chi Wai Tse"/></a>
                     <h2 itemprop="name">Chrisopher Chi Wai Tse</h2>
                     <ul itemprop="description" class="organizer-description">
                         <li>Hack Partners events organizer.</li>
