--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
     <section name="speakers" id="speakers">
         <div class="row" id="prizes-content">
             <div class="col-lg-8 col-lg-offset-2 columns">
-                <h1 class="text-center">Keynote Speakers</h1>
+                <h1 class="text-center">Hackathon Keynotes</h1>
                 <hr/>
                 <div class="row main">
 
@@ -330,29 +330,6 @@
                             From May 2003 to May 2011 Andrew was a local councillor on Harrogate Borough Council, representing the High Harrogate ward. He was also Cabinet Member for Resources from May 2003 to May 2010.
 
                             Since being elected in 2010, Andrew has been a Parliamentary Private Secretary on the health, business and transport teams. He has also chaired the Northern Electrification Taskforce which provided the Secretary of State for Transport with advice on the next steps for electrification of railways in the North of England.
-                        </p>
-                    </div>
-                </div>
-
-                <br><br>
-                <div class="row main">
-
-                    <div class="col-sm-3">
-                        <img style="width:100%;" src="img/index/cp.jpg"/>
-                    </div>
-                    <div class="speaker-description col-sm-9">
-                        <h2>Claire Perry</h2>
-                        <h3>Parliamentary Under Secretary of State at Department for Transport</h3>
-                        <p>
-                            Claire Perry was appointed Parliamentary Under Secretary of State at the Department for Transport on 15 July 2014 and again in May 2015. She was elected Conservative MP for Devizes in 2010.
-                        </p>
-                        <p>
-                            In 2007 Claire worked an adviser to George Osborne before being elected as the MP for the Devizes constituency in central Wiltshire in May 2010. Highlights of her political career include:
-
-                            Member of the Justice. Select Committee from 2010 to 2011.
-                            Parliamentary Private Secretary to the Secretary of State for Defence, from 2011 to 2013.
-                            Special Advisor to the Prime Minister on preventing the sexualisation and commercialisation of children.
-                            Government Whip in 2013 and in 2014.
                         </p>
                     </div>
                 </div>
@@ -381,10 +358,17 @@
     </section>
 
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
     <section name="speakers" id="speakers">
         <div class="row" id="prizes-content">
             <div class="col-lg-8 col-lg-offset-2 columns">
-                <h1 class="text-center">Keynote Speakers</h1>
+                <h1 class="text-center">Post-Reception Keynote</h1>
                 <hr/>
 
                 <br><br>
