--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                           </a>
                         </div>
                         <div class="col-xs-3 img-container">
-                          <a href="http://www.ft.com/cms/s/0/1553f5ac-8ea2-11e5-8be4-3506bf20cc2b.html#axzz3sLxvaCLJ">
+                          <a href="https://www.google.co.uk/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0ahUKEwiKh4iGkavJAhWL1xoKHTihDa0QFgggMAA&url=http%3A%2F%2Fwww.ft.com%2Fcms%2Fs%2F0%2F1553f5ac-8ea2-11e5-8be4-3506bf20cc2b.html&usg=AFQjCNHP2edj4_pUXdSxFpBfAMYCiwaZPw">
                             <img style="margin: auto auto" class="img-responsive" src="https://d24j9r7lck9cin.cloudfront.net/l/o/1/1556.1405339452.png"/>
                           </a>
                         </div>
