--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                         <a alt="HackTrain News" href="http://news.hacktrain.com">News</a>
                     </li>
                     <li>
-                        <a alt="contact us" type="submit" onclick="document.getElementById('contact-us-form').submit()">Contact Us</a>
-                        <form id="contact-us-form" target="_blank" action="MAILTO:hello@hackpartners.com" method="post" enctype="text/plain" class="form-horizontal col-sm-12"></form>
+                        <a alt="contact us" href="http://accelerator.hacktrain.com/contact/">Contact Us</a>
                     </li>
                     <li>
                         <a alt="apply now" class="btn btn-default" href="https://hackpartners.typeform.com/to/pvSvMG" role="button" class="btn btn-info">
