--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
 
             <ul class="list-inline banner-social-buttons col-sm-12">
                 <li class="col-sm-6">
-                    <a alt="twitter" href="https://twitter.com/TheHackTrain" class="btn btn-default btn-lg"> <span style="font-size:30px" class="network-name">Hacktrain Hackathons</span></a>
+                    <a alt="twitter" href="/hackathon-2.html" class="btn btn-default btn-lg"> <span style="font-size:30px" class="network-name">Hacktrain Hackathon</span></a>
                 </li>
 
                 <li class="col-sm-6">
-                    <a alt="facebook" href="https://facebook.com/TheHackTrain" class="btn btn-default btn-lg col-sm 6"> <span style="font-size:30px" class="network-name">RailTech Accelerator</span></a>
+                    <a alt="facebook" href="https://accelerator.hacktrain.com" class="btn btn-default btn-lg col-sm 6"> <span style="font-size:30px" class="network-name">RailTech Accelerator</span></a>
                 </li>
             </ul>
 
