changed font sizes

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <img  alt="the hacktrain" class="light" style="width: 70%; padding:80px 0 80px" src="img/index/hacktrain-logo-white-dates-nov-2015.png"/>
+                        <img  alt="the hacktrain" class="light" style="width: 60%; padding:80px 0 80px" src="img/index/hacktrain-logo-white-dates-nov-2015.png"/>
                     </div>
                 </div>
             </div>
@@ -144,11 +144,11 @@
 
             <ul class="list-inline banner-social-buttons col-sm-12">
                 <li class="col-sm-6">
-                    <a alt="twitter" href="/hackathon-2.html" class="btn btn-default btn-lg"> <span style="font-size:30px" class="network-name">Hacktrain Hackathon</span></a>
+                    <a alt="twitter" href="/hackathon-2.html" class="btn btn-default btn-lg"> <span style="font-size:23px" class="network-name">Hacktrain Hackathon</span></a>
                 </li>
 
                 <li class="col-sm-6">
-                    <a alt="facebook" href="https://accelerator.hacktrain.com" class="btn btn-default btn-lg col-sm 6"> <span style="font-size:30px" class="network-name">RailTech Accelerator</span></a>
+                    <a alt="facebook" href="https://accelerator.hacktrain.com" class="btn btn-default btn-lg col-sm 6"> <span style="font-size:23px" class="network-name">RailTech Accelerator</span></a>
                 </li>
             </ul>
 
@@ -157,7 +157,7 @@
 
             <div class="col-lg-8 col-lg-offset-2">
                 <p>
-                    <h2>As seen in:</h2>
+                    <h2 style="font-size:20px">As seen in:</h2>
                      <div class="container col-xs-12">
                         <div class="col-xs-3 img-container">
                           <a href="http://www.theguardian.com/politics/2015/nov/19/transport-hackathon-hacktrain-uk-railways">
@@ -375,7 +375,7 @@
                     </a>
                 </div>
 
-                <div alt="SilverRail Technologies" class="col-sm-4 img-container">
+                <div alt="SilverRail Technologies" class="col-xs-4 img-container">
                     <a alt="SilverRail Technologies" target="_blank" style="width: 100%;" href="http://silverrailtech.com/">
                         <img style="width: 100%;" src="img/sponsors/logo-silverrail.png"/>
                     </a>
