--- a/hackathon-1.html
+++ b/hackathon-1.html
@@ -104,13 +104,16 @@
                         <a class="page-scroll" href="#sponsors">Partners</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/accelerator.html">Accelerator</a>
+                        <a class="page-scroll" href="http://accelerator.hacktrain.com">Accelerator</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/2015.html">2015 Journey</a>
+                        <a alt="HackTrain News" href="http://news.hacktrain.com">News</a>
                     </li>
                     <li>
-                        <a data-toggle="modal" href="#myModal" role="button" class="btn btn-info">
+                        <a class="page-scroll" href="/hackahon-2">2.0 Journey</a>
+                    </li>
+                    <li>
+                        <a data-toggle="modal" href="http://accelerator.hacktrain.com/contact" role="button" class="btn btn-info">
                           Contact Us
                         </a>
                       </li>
