--- a/hackathon-2.html
+++ b/hackathon-2.html
@@ -100,9 +100,6 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li>
-                        <a alt="home" href="http://hacktrain.com">Home</a>
-                    </li>
-                    <li>
                         <a alt="HackTrain F.A.Q." href="#faq">F.A.Q.</a>
                     </li>
                     <li>
@@ -115,18 +112,11 @@
                         <a alt="HackTrain News" href="http://news.hacktrain.com">News</a>
                     </li>
                     <li>
-                        <a alt="contact us" href="http://accelerator.hacktrain.com/contact/">Contact Us</a>
+                        <a class="page-scroll" href="/hackahon-1">1.0 Journey</a>
                     </li>
                     <li>
-                        <a alt="apply now" class="btn btn-default" href="https://hackpartners.typeform.com/to/pvSvMG" role="button" class="btn btn-info">
-                          Apply now
-                        </a>
-                     </li><!-- 
-                    <li style="width: 150px; position: relative;">
-                      <a href="http://bloomberg.com/RD">
-                        <img style="margin: auto auto; width: 100%; position: absolute; margin-top: -10px" class="img-responsive" src="img/index/bloomberg-logo-powered.png"/>
-                      </a>
-                    </li> -->
+                        <a alt="contact us" href="http://accelerator.hacktrain.com/contact/">Contact Us</a>
+                    </li>
                 </ul>
             </div>
         </div>
