--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </li>
 
                 <li class="col-sm-6">
-                    <a alt="facebook" href="https://accelerator.hacktrain.com" class="btn btn-default btn-lg col-sm 6"> <span style="font-size:23px" class="network-name">RailTech Accelerator</span></a>
+                    <a alt="facebook" href="http://accelerator.hacktrain.com" class="btn btn-default btn-lg col-sm 6"> <span style="font-size:23px" class="network-name">RailTech Accelerator</span></a>
                 </li>
             </ul>
 
